--- a/requirements_gpu.txt
+++ b/requirements_gpu.txt
@@ -19,7 +19,7 @@ boltons==21.0.0
 cachetools==5.2.0
 cffi==1.15.1
 charset-normalizer==2.1.1
-clean-fid
+clean-fid==0.1.29
 click==8.1.3
 clip @ git+https://github.com/openai/CLIP.git@d50d76daa670286dd6cacf3bcd80b5e4823fc8e1
 cmake==3.27.1
@@ -44,7 +44,7 @@ font-roboto==0.0.1
 fonts==0.0.3
 fonttools==4.38.0
 frozenlist==1.3.3
-fsspec>=2022.11.0
+fsspec==2022.11.0
 ftfy==6.1.1
 future==0.18.2
 gdown==4.6.0
@@ -53,16 +53,16 @@ gitdb==4.0.10
 GitPython==3.1.29
 google-auth==2.15.0
 google-auth-oauthlib==0.4.6
-gradio>=3.12.0
+gradio==3.12.0
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.1
-huggingface-hub==0.19.4
+huggingface-hub==0.16.4
 humanfriendly==10.0
 imageio==2.22.4
 importlib-metadata==5.1.0
 inflection==0.5.1
-invisible-watermark>=0.2.0
+invisible-watermark==0.1.5
 Jinja2==3.1.2
 joblib==1.2.0
 jsonmerge==1.8.0
@@ -88,8 +88,21 @@ mypy-extensions==0.4.3
 networkx==2.8.8
 numba==0.56.4
 numpy==1.23.5
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 oauthlib==3.2.2
 omegaconf==2.2.3
+onnx
+onnxruntime
 open-clip-torch @ git+https://github.com/mlfoundations/open_clip.git@bb6e834e9c70d9c27d0dc3ecedeebeaeb1ffad6b
 opencv-python==4.6.0.66
 orjson==3.8.3
@@ -156,7 +169,7 @@ termcolor==2.1.1
 threadpoolctl==3.1.0
 tifffile==2022.10.10
 timm==0.6.7
-tokenizers>=0.13.2
+tokenizers==0.13.2
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
@@ -168,7 +181,8 @@ torchvision==0.15.2
 tornado==6.2
 tqdm==4.64.1
 trampoline==0.1.2
-transformers==4.36.0  
+transformers==4.31.0
+triton==2.0.0
 typing-inspect==0.8.0
 typing_extensions==4.4.0
 tzdata==2022.7
@@ -183,4 +197,4 @@ Werkzeug==2.2.2
 yapf==0.32.0
 yarl==1.8.2
 zipp==3.11.0
-
+streamlit-drawable-canvas
